<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointing_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="igonzf06@estudiantes.unileon.es">robotica</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>yolov8_msgs</depend>
  <depend>pointing_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
